fixed font size in about on small screens

--- a/app/styles/about.module.css
+++ b/app/styles/about.module.css
@@ -41,7 +41,7 @@
 
 .aboutMeSection p {
   font-family: "Inter", sans-serif;
-  font-size: 0.8rem;
+  font-size: 1rem;
   line-height: 1.6;
   margin-bottom: 1rem;
   font-weight: 200;
